# AdventOfCode2021

./: .gitignore  README.md
cpp/: 1.cpp  10.cpp  11.cpp  12.cpp  13.cpp  14.cpp  15.cpp  16.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  9.cpp  README.md  common.h  meson.build
f#/: 1.fs  README.md  f#.fsproj
