project('advent2021', 'cpp',
  version : '0.1',
  default_options : ['warning_level=3', 'cpp_std=c++20'])

executable('1',
    '1.cpp',
    dependencies: [])

executable('2',
    '2.cpp',
    dependencies: [])

executable('3',
    '3.cpp',
    dependencies: [])

executable('4',
    '4.cpp',
    dependencies: [])

executable('5',
    '5.cpp',
    dependencies: [])

executable('6',
    '6.cpp',
    dependencies: [])

executable('7',
    '7.cpp',
    dependencies: [])

executable('8',
    '8.cpp',
    dependencies: [])

executable('9',
    '9.cpp',
    dependencies: [])

executable('10',
    '10.cpp',
    dependencies: [])